some changes about CORS