@@ -4,9 +4,15 @@ import com.mySpring.demo.Models.News;
 import com.mySpring.demo.Models.Visitor;
 import com.mySpring.demo.Repositories.NewsRepository;
 import com.mySpring.demo.Repositories.VisitorRepository;
+import org.deeplearning4j.text.tokenization.tokenizer.preprocessor.CommonPreprocessor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -15,6 +21,8 @@ import org.deeplearning4j.text.sentenceiterator.BasicLineIterator;
 import org.deeplearning4j.text.sentenceiterator.SentenceIterator;
 import org.deeplearning4j.text.tokenization.tokenizerfactory.DefaultTokenizerFactory;
 import org.deeplearning4j.text.tokenization.tokenizerfactory.TokenizerFactory;
+
+@Component
 public class Recommendation {
 
     @Autowired
@@ -23,9 +31,9 @@ public class Recommendation {
     @Autowired
     NewsRepository newsRepository;
 
-    public List<News> getRecommendedNews(Visitor visitor) throws FileNotFoundException {
+    public List<News> getRecommendedNews(String uuid) throws IOException {
         // 获取用户的历史记录
-        String uuid = visitor.getUUID();
+//        String uuid = visitor.getUUID();
         List<Visitor> history = visitorRepository.getHistoryByUUID(uuid);
         List<Long> newsIdList = new ArrayList<>();
         for (Visitor visitorHistory : history) {
@@ -35,16 +43,19 @@ public class Recommendation {
         List<News> historyNews = newsRepository.findAllByIds(newsIdList);
 
         // 将历史新闻标题转换为字符串列表
-        List<String> historyTitles = historyNews.stream().map(News::getTitle).collect(Collectors.toList());
-
+        List<String> historyTitles = historyNews.stream().map(News::getTitle).toList();
+        // 将历史新闻标题写入临时文件
+        Path tempFile = Files.createTempFile("news_titles", ".txt");
+        Files.write(tempFile, historyTitles, StandardCharsets.UTF_8);
         // 使用Word2Vec模型训练历史新闻标题
-        SentenceIterator iter = new BasicLineIterator(String.valueOf(historyTitles));
+        SentenceIterator iter = new BasicLineIterator(tempFile.toFile().getAbsolutePath());
         TokenizerFactory t = new DefaultTokenizerFactory();
+        t.setTokenPreProcessor(new CommonPreprocessor());
         Word2Vec vec = new Word2Vec.Builder()
                 .minWordFrequency(1)
                 .iterations(1)
-                .layerSize(100)
-                .seed(42)
+                .layerSize(256)
+                .seed(2)
                 .windowSize(5)
                 .iterate(iter)
                 .tokenizerFactory(t)
